Alteração de imagens e HTML

--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
                 <h1>
                     SBAUQ
                 </h1>
+                <h4>Sindicato Brasileiro de advocacia Unidos pelo Qatar</h4>
                 <div>
                     <img src="Logo.png" alt="">
                 </div>
             </div>
             <div id="esquerda">
-                <h1>Agência de advocacia especializada nas leis do Qatar.</h1>
+                <h1>Agência de advocacia especializada nas Leis do Qatar.</h1>
                 <ha>
-                    Possuímos uma equipe com bases fortes e grande histórico de casos, podemos te ajudar quando
+                    Possuímos uma equipe com bases fortes e grande histórico de casos internacionais, podemos te ajudar quando
                     necessário,
                     você está em boas mãos!
                 </ha>
@@ -71,7 +72,7 @@
                 <h1>
                     Vestir-se com roupas inadequadas para o estado Islâmico.
                 </h1>
-                <img src="advogado.png" alt="advogado]">
+                <img src="advogado.png" alt="advogado">
                 <h1>
                   Problemas com o consumo de carne de porco ou bebidas.
                 </h1>
@@ -100,18 +101,18 @@
             </div>
             <div id="nomeDireita">
                 <div id="alisson">
-                    <h1>Dr. Alisson</h1>
-                    <img src="AlissonFace.jpeg" alt="">
+                    <h1>Dra. Avlis</h1>
+                    <img src="pexels-cottonbro-6538438.jpg" alt="">
                     <div class="textoImagens">
-                        Advogado formado em Direito Civil na Universidade<br> de Doha e com bom conhecimento das leis
-                        civis<br> do Qatar e da Sharia Islâmica
+                        Advogada formada em Direito Civil na Universidade<br> de Doha e com bom conhecimento das leis
+                        civis<br> do Qatar e da Sharia Islâmica <br> <small >*Imagem e formação meramente ilustrativas.</small>
                     </div>
                 </div>
                 <div id="iago">
-                    <h1>Dr. Iago</h1>
-                    <img src="HF MAS (552)2.jpg" alt="">
+                    <h1>Dr. Sonari</h1>
+                    <img src="pexels-kampus-production-8428066.jpg" alt="">
                     <div class="textoImagens">
-                        Advogado formado em Direito Internacional<br> com 10 anos de experiência.
+                        Advogado formado em Direito Internacional<br> com 10 anos de experiência.<br> <small >*Imagem e formação meramente ilustrativas.</small>
                     </div>
                 </div>
                 <div class="limpaFlutuacao">
@@ -121,17 +122,17 @@
             <div id="nomeEsquerda">
 
                 <div id="davi">
-                    <h1>Dr. Davi</h1>
-                    <img src="DaviFace.jpeg" alt="">
+                    <h1>Dr. Joseff</h1>
+                    <img src="pexels-rodnae-productions-7841444.jpg" alt="">
                     <div class="textoImagens">
-                        Advogado com Mestrado em Direito Internacional.
+                        Advogado com Mestrado em Direito Internacional.<br> <small >*Imagem e formação meramente ilustrativas.</small>
                     </div>
                 </div>
                 <div id="eduardo">
-                    <h1>Imame Eduardo</h1>
-                    <img src="Eduardoface.jpeg" alt="">
+                    <h1>Imame Malarum</h1>
+                    <img src="pexels-sora-shimazaki-5668781.jpg" alt="">
                     <div class="textoImagens">
-                        "Padre Islâmico" ajuda no tribunal tendo <br>grande influência sobre o sistema tribunal Islâmico
+                        "Padre Islâmico" ajuda no tribunal tendo <br>grande influência sobre o sistema tribunal Islâmico.<br> <small >*Imagem e formação meramente ilustrativas.</small>
                     </div>
                 </div>
             </div>
