Alteração dos ID nomes CSS e inserção do link pexels

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <h1>
                     SBAUQ
                 </h1>
-                <h4>Sindicato Brasileiro de advocacia Unidos pelo Qatar</h4>
+                <h4>Sindicato Brasileiro de Advocacia Unidos pelo Qatar</h4>
                 <div>
                     <img src="Logo.png" alt="">
                 </div>
             </div>
             <div id="esquerda">
-                <h1>Agência de advocacia especializada nas Leis do Qatar.</h1>
+                <h1>Agência de Advocacia especializada nas Leis do Qatar.</h1>
                 <ha>
                     Possuímos uma equipe com bases fortes e grande histórico de casos internacionais, podemos te ajudar quando
                     necessário,
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div id="nomeDireita">
-                <div id="alisson">
+                <div id="avlis">
                     <h1>Dra. Avlis</h1>
                     <img src="pexels-cottonbro-6538438.jpg" alt="">
                     <div class="textoImagens">
@@ -108,7 +108,7 @@
                         civis<br> do Qatar e da Sharia Islâmica <br> <small >*Imagem e formação meramente ilustrativas.</small>
                     </div>
                 </div>
-                <div id="iago">
+                <div id="sonari">
                     <h1>Dr. Sonari</h1>
                     <img src="pexels-kampus-production-8428066.jpg" alt="">
                     <div class="textoImagens">
@@ -121,14 +121,14 @@
 
             <div id="nomeEsquerda">
 
-                <div id="davi">
+                <div id="joseff">
                     <h1>Dr. Joseff</h1>
                     <img src="pexels-rodnae-productions-7841444.jpg" alt="">
                     <div class="textoImagens">
                         Advogado com Mestrado em Direito Internacional.<br> <small >*Imagem e formação meramente ilustrativas.</small>
                     </div>
                 </div>
-                <div id="eduardo">
+                <div id="malarum">
                     <h1>Imame Malarum</h1>
                     <img src="pexels-sora-shimazaki-5668781.jpg" alt="">
                     <div class="textoImagens">
@@ -167,6 +167,7 @@
             </div>
             <div id="textoCopy">
                 Copyright &copy; 2022 Todos os direitos reservados. <br>Este site foi desenvolvido para fins estudantis. 
+                <br><small>*Imagens tiradas do site <a href="https://www.pexels.com/pt-br/" target="_blank">pexels.com</a></small>
             </div>
         </div>
     </div>
